2025-09-10  Zhengyi Fu  <i@fuzy.me>

	Improve gptel write_file tool with ediff interface and fix project-root warnings.

	* site-lisp/gptel-config.el: Add require for dom.
	(write_file): Update description to mention ediff interface and side-by-side
	comparison instead of simple preview.  Remove redundant user option descriptions.
	(+gptel-ediff-file-with-buffer): Fix session buffer detection to check for
	gptel-mode binding before using current-buffer.
	(+gptel-edit-file-async): Update docstring to use proper backticks for
	gptel-mode reference.
	(gptel-agent): Suppress warnings about obsolete project-roots function
	and use with-suppressed-warnings macro.

2025-09-09  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add pcap-mode.

2025-09-10  Zhengyi Fu  <i@fuzy.me>

	Fix command buffer naming in gptel configuration.

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Fix
	command buffer name generation to handle cases where
	project-current returns nil.

2025-09-10  Zhengyi Fu  <i@fuzy.me>

	Add write_file tool and refactor file editing functionality in
	gptel configuration.

	* site-lisp/gptel-config.el: Add require for flymake.
	(+gptel-write-file-async): New async tool function for writing
	files with user preview.
	(+gptel-ediff-buffers): New helper function for ediff sessions
	with proper cleanup.
	(+gptel-ediff-file-with-buffer): New helper function for file
	editing with user confirmation.
	(write_file): New gptel tool for writing files with preview and
	confirmation.
	(+gptel-edit-file-async): Refactor to use new ediff helper
	functions for better code organization.

2025-09-09  Zhengyi Fu  <i@fuzy.me>

	Replace README.org with comprehensive README.md documentation.

	* README.md: New comprehensive documentation file with detailed
	configuration overview, installation instructions, feature
	descriptions, keybindings, and usage guide.
	* README.org: Remove outdated minimal documentation file.

2025-09-08  Zhengyi Fu  <i@fuzy.me>
